Improve algorithm, add test data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
-
-project(arraydiff LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 17
-    )
+project(yavom LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(arraydifftest test.cpp diff.h)
+add_executable(yavom test.cpp diff.h)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/testdata/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/testdata/)
