Implement experimental using async

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(yavom test.cpp diff.h)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/testdata/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/testdata/)
+
+option(USE_MULTITHREAD "(Experimental) Use separate async for forward/backward steps" OFF) #OFF by default
+if(USE_ASYNC)
+    find_package (Threads)
+    target_link_libraries (yavom ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_definitions(yavom PRIVATE YAVOM_ASYNC="1")
+endif(USE_ASYNC)
+#unset(USE_ASYNC CACHE)
